重构新增 数据顺序存储引擎

--- a/sword-stream-io/pom.xml
+++ b/sword-stream-io/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
     </dependencies>
 
