重构数据存储 数据分片系统构建

--- a/sword-data-storage/pom.xml
+++ b/sword-data-storage/pom.xml
@@ -44,9 +44,9 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<artifactId>sword-mq-jade</artifactId>
+	<artifactId>sword-data-storage</artifactId>
 	<packaging>jar</packaging>
-	<name>sword-mq-jade</name>
+	<name>sword-data-storage</name>
 
 
 	<dependencies>
