每个Job构建 集群存储 进行数据备份校验等

--- a/sword-redis/pom.xml
+++ b/sword-redis/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>sword-stream-io</artifactId>
 			<version>${project.version}</version>
         </dependency>
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-tasks</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
 		<dependency>
