data-common 重命名为 data-utils

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<url>https://github.com/yueyeiuxing03/sword-array</url>
 
 	<modules>
-		<module>sword-common</module>
+		<module>sword-utils</module>
 		<module>sword-tasks</module>
 		<module>sword-id-generator</module>
 		<module>sword-redis</module>
