--- a/sword-network-rpc/pom.xml
+++ b/sword-network-rpc/pom.xml
@@ -51,7 +51,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-common</artifactId>
+			<artifactId>sword-utils</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
