--- a/sword-redis-replicator/pom.xml
+++ b/sword-redis-replicator/pom.xml
@@ -52,7 +52,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-common</artifactId>
+			<artifactId>sword-utils</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
