--- a/sword-zpiper-server/pom.xml
+++ b/sword-zpiper-server/pom.xml
@@ -69,7 +69,7 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-common</artifactId>
+			<artifactId>sword-utils</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
