--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>sword-redis-replicator</module>
         <module>sword-network-rpc</module>
 		<module>sword-zpiper</module>
+		<module>sword-znamer</module>
 	</modules>
 
 	<licenses>
