--- a/sword-network-rpc/pom.xml
+++ b/sword-network-rpc/pom.xml
@@ -56,6 +56,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-tasks</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>5.0.0.Alpha1</version>
