--- a/sword-zadmin/pom.xml
+++ b/sword-zadmin/pom.xml
@@ -79,6 +79,12 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
